features/inference-gateway/infra/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-gateway-route
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: inference-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: "inference.networking.k8s.io"
      kind: InferencePool
      name: advanced-inference-pool
      port: 8080
